--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
 <html>
-kauhsik yobah
+      <head>
+        <title>Kaushik Website</title>
+      </head>
+  
+      <body>
+        <h1> Work in progress ........
+      </body>
 </html>
